--- a/config/_environment.env
+++ b/config/_environment.env
@@ -1,3 +1,4 @@
 # DB CONNECT
-// hiding the port and DB
-DB = mongodb://localhost:27017/OxbridgeDB
+// hiding the port and the path to MongoDB
+PATH_MONGODB = mongodb://localhost:27017/OxbridgeDB
+PORT = 3000
