--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node": "8.9.4"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.11",
     "azure-iothub": "^1.12.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
@@ -25,17 +26,21 @@
     "multer": "^1.4.2",
     "node": "^8.9.4",
     "node-datetime": "^2.1.2",
+    "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "typescript": "^4.2.4"
+    "tslint": "^6.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
-    "i": "^0.3.6"
+    "i": "^0.3.6",
+    "jest": "^27.0.4",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.2"
   },
   "scripts": {
     "test": "set NODE_ENV=dev&&jest",
@@ -43,6 +48,24 @@
     "build": "tsc && copy package.json dist\\package.json",
     "prestart": "npm run build",
     "start": "set NODE_ENV=dev&&ts-node ."
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/tests/*.+(ts|tsx|js)"
+    ]
   },
   "keywords": [],
   "author": "",
